<resources>

  <string name="app_name">GSMS</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="logo_label">Logo</string>
  <string name="add_sign">+</string>
  <string name="add_class_btn_description">Add a new class to this school</string>
  <string name="add_class">Add Class</string>

  <string name="login">Login</string>
  <string name="create_new_school">Create New School</string>
  <string name="password">Password</string>
  <string name="gsms_id">GSMS ID</string>
  <string name="email">Email</string>
  <string name="sign_in">Sign In</string>
  <string name="name_of_school">Name Of School</string>
  <string name="school_s_address">School\'s Address</string>
  <string name="contact_details">Contact Details</string>
  <string name="phone_number">Phone Number</string>
  <string name="profile_picture">Profile Picture</string>
  <string name="no_file_chosen">No file chosen</string>
  <string name="school">School</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="repeat_password">Repeat Password</string>
  <string name="administrator">Administrator</string>
  <string name="register_school">Register School</string>
  <string name="classname">ClassName</string>
  <string name="teacher_s_full_name">Teacher\'s Full Name</string>
  <string name="teacher">Teacher</string>
  <string name="students">Students</string>
  <string name="total_number_of_students">TotalNumberOfStudents</string>
  <string name="fullname_of_parent">Fullname of Parent</string>
  <string name="parent">Parent</string>
  <string name="student_class">Student Class</string>
  <string name="student_name">Student Name</string>
  <string name="attendance">Attendance</string>
  <string name="date">Date</string>
  <string name="attendance_percentage">Attendance Percentage</string>
  <string name="register">Register</string>
  <string name="teacher_s_image">Teacher\'s Image</string>
  <string name="class_title">Class: S S S 1 A</string>
  <string name="student">Student</string>
  <string name="add_student">Add Student</string>
  <string name="student_age">Student Age</string>
  <string name="student_image">Student Image</string>
  <string name="parent1_image">Parent1 Image</string>
  <string name="parent2_image">Parent2 Image</string>
  <string name="gsms_logo">GSMS Logo</string>
  <string name="add_new_class">Add new class</string>
  <string name="class_name">Class Name</string>
  <string name="school_image">School image</string>
  <string name="close_button">Close Button</string>
  <string name="check_mark">Check Mark</string>
  <string name="create_class">Create Class</string>
  <string name="take_attendance">Take Attendance</string>
  <string name="submit">Submit</string>
  <string name="full_name">%1$s %2$s</string>
  <string name="invalid_field_alert_icon">Invalid Field Alert Icon</string>
  <string name="folder_icon">Folder Icon</string>
  <string name="students_count">Number Of Students: %1$d</string>
  <string name="logout">Logout</string>
  <string name="success_registration_details_intro">School registration was successful. Please note the details below as you will need it for subsequent login.</string>
  <string name="identification_number">Identification Number</string>
  <string name="administrator_email">Administrator Email</string>
  <string name="school_registration_success_info">School registration was successful</string>
  <string name="school_details_note_prompt">Please note the School Identification Number and Administrator Email below as you will need it for subsequent login.</string>
  <string name="proceed">Proceed</string>
  <string name="jan">Jan</string>
  <string name="feb">Feb</string>
  <string name="mar">Mar</string>
  <string name="apr">Apr</string>
  <string name="may">May</string>
  <string name="jun">Jun</string>
  <string name="jul">Jul</string>
  <string name="aug">Aug</string>
  <string name="sep">Sep</string>
  <string name="oct">Oct</string>
  <string name="nov">Nov</string>
  <string name="dec">Dec</string>
  <string name="cancel">Cancel</string>
  <string name="done">Done</string>
  <string name="attendance_status">Attendance Status</string>
  <string name="month">Month</string>
  <string name="increment_year">Increment Year</string>
  <string name="decrement_year">Decrement Year</string>
  <string name="year">Year</string>
  <string name="attendance_loading_error_prompt">
    Application encountered network error while loading attendance.\nTap on this error to reload.
  </string>
</resources>