<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <import type="android.view.View"/>
    <variable
      name="viewModel"
      type="com.chass.gsms.viewmodels.MonthPicker" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/teal_border"
    android:padding="8dp"
    android:visibility="@{viewModel.open? View.VISIBLE : View.GONE}">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@color/teal"
      android:padding="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <EditText
        android:id="@+id/year_txt"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:background="@{viewModel.valid? @drawable/dark_teal_border_white_background : @drawable/alert_border_white_background}"
        android:text="@={viewModel.yearText}"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/inc_btn"
        app:layout_constraintStart_toEndOf="@id/dec_btn"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/alert_border_white_background"/>

      <ImageButton
        android:id="@+id/dec_btn"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_left_bold_box"
        app:layout_constraintBottom_toBottomOf="@id/year_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/year_txt" />

      <ImageButton
        android:id="@+id/inc_btn"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_right_bold_box"
        app:layout_constraintBottom_toBottomOf="@id/year_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/header">

      <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==0? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(1)}"
            android:text="@string/jan"
            tools:background="@color/teal" />

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==1? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(2)}"
            android:text="@string/feb"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==2? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(3)}"
            android:text="@string/mar"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==3? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(4)}"
            android:text="@string/apr"
            tools:background="@color/teal"/>
        </TableRow>

        <TableRow>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==4? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(5)}"
            android:text="@string/may"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==5? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(6)}"
            android:text="@string/jun"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==6? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(7)}"
            android:text="@string/jul"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==7? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(8)}"
            android:text="@string/aug"
            tools:background="@color/teal"/>
        </TableRow>

        <TableRow>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==8? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(9)}"
            android:text="@string/sep"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==9? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(10)}"
            android:text="@string/oct"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==10? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(11)}"
            android:text="@string/nov"
            tools:background="@color/teal"/>

          <Button
            style="@style/picker_month_button_style"
            android:background="@{viewModel.month==11? @color/colorPrimary : @color/teal}"
            android:onClick="@{()->viewModel.setMonth(12)}"
            android:text="@string/dec"
            tools:background="@color/teal"/>
        </TableRow>

        <TableRow>

          <Button
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_span="2"
            android:background="@color/teal"
            android:onClick="@{()->viewModel.select()}"
            android:text="@string/cancel"
            android:textColor="#fff" />

          <Button
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_span="2"
            android:background="@color/teal"
            android:onClick="@{()->viewModel.revert()}"
            android:text="@string/done"
            android:textColor="#fff" />
        </TableRow>
      </TableLayout>
    </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>