<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
      name="viewModel"
      type="com.chass.gsms.ui.login.LoginViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/fragment_login"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textAlignment="center"
      tools:context=".ui.login.LoginFragment">

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_btn"
        android:onClick="launchHome"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPassword" />

    <Button
        android:id="@+id/btn_createNewSchool"
        android:layout_width="152dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/no_border_btn"
        android:drawableStart="@android:drawable/ic_input_add"
        android:drawableTint="#020202"
        android:drawingCacheQuality="auto"
        android:text="@string/create_new_school"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtGsmsId"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_SignIn"
        app:layout_constraintTop_toTopOf="@+id/txt_SignIn" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtEmail"
        android:autofillHints="true" />

    <EditText
        android:id="@+id/edtTxtGsmsId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/gsms_id"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_gsmsLogo" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtGsmsId"
        app:layout_constraintStart_toStartOf="@+id/edtTxtGsmsId"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtGsmsId"
        android:autofillHints="true" />

    <TextView
        android:id="@+id/txt_SignIn"
        android:layout_width="147dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_gsmsLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtGsmsId"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/edtTxtGsmsId"
        app:layout_constraintTop_toBottomOf="@+id/txt_SignIn"
        app:srcCompat="@drawable/logo" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>