<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <import type="android.view.View"/>
    <variable
      name="viewModel"
      type="com.chass.gsms.ui.login.SchoolRegistrationViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim"
    android:visibility="@{viewModel.school == null? View.GONE : View.VISIBLE}">
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHeight_default="wrap"
      app:layout_constraintVertical_bias="0.5">

      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="24dp"
        android:gravity="center"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:contentPadding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="24dp"
          android:orientation="vertical">

          <ImageView
            android:id="@+id/logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/logo_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_check_circle" />

          <TextView
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/school_registration_success_info"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

          <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/school_details_note_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/success" />

          <TextView
            android:id="@+id/school_name_label"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name_of_school"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro" />

          <TextView
            android:id="@+id/school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.school.name}"
            app:layout_constraintBottom_toBottomOf="@id/school_name_label"
            app:layout_constraintStart_toEndOf="@id/school_name_label"
            tools:text="City Model School" />

          <TextView
            android:id="@+id/school_id_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/identification_number"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/school_name_label"
            app:layout_constraintStart_toStartOf="@id/school_name_label"
            app:layout_constraintTop_toBottomOf="@id/school_name_label" />

          <TextView
            android:id="@+id/school_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:number="@{viewModel.school.id}"
            app:layout_constraintBottom_toBottomOf="@id/school_id_label"
            app:layout_constraintStart_toStartOf="@id/school_name"
            tools:text="101" />

          <TextView
            android:id="@+id/school_admin_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/administrator_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/school_name_label"
            app:layout_constraintStart_toStartOf="@id/school_name_label"
            app:layout_constraintTop_toBottomOf="@id/school_id_label" />

          <TextView
            android:id="@+id/school_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.school.adminEmail}"
            app:layout_constraintBottom_toBottomOf="@id/school_admin_label"
            app:layout_constraintStart_toStartOf="@id/school_name"
            tools:text="admin@school.com" />

          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#16B6A7"
            android:onClick="@{()->viewModel.login()}"
            android:text="@string/proceed"
            android:textColor="#fff"
            app:layout_constraintTop_toBottomOf="@id/school_admin_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>