<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable
      name="viewModel"
      type="com.chass.gsms.ui.newclass.NewClassViewModel" />
  </data>
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <Button
          android:id="@+id/btn_login2"
          style="@style/Widget.AppCompat.Button.Borderless.Colored"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:background="@drawable/round_btn"
          android:text="@string/login"
          android:textAllCaps="true"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          android:textColor="#FFFFFF"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="@+id/regStudentCardView"
          app:layout_constraintStart_toStartOf="@+id/regStudentCardView"
          app:layout_constraintTop_toBottomOf="@+id/regStudentCardView" />

      <TextView
          android:id="@+id/addNewClass"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="8dp"
          android:text="@string/add_new_class"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/colorPrimary"
          android:textSize="30sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TableRow
          android:id="@+id/addNewClassTableRow"
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_marginTop="4dp"
          android:background="@color/colorPrimaryDark"
          app:layout_constraintEnd_toEndOf="@+id/addNewClass"
          app:layout_constraintStart_toStartOf="@+id/addNewClass"
          app:layout_constraintTop_toBottomOf="@+id/addNewClass" />

      <androidx.cardview.widget.CardView
          android:id="@+id/regStudentCardView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:layout_constraintEnd_toEndOf="@+id/addNewClassTableRow"
          app:layout_constraintStart_toStartOf="@+id/addNewClassTableRow"
          app:layout_constraintTop_toBottomOf="@+id/addNewClassTableRow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

          <EditText
              android:id="@+id/edtClassName"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginEnd="8dp"
              android:autofillHints="no"
              android:background="@drawable/edit_text_border"
              android:ems="10"
              android:hint="@string/class_name"
              android:inputType="textPersonName"
              android:padding="4dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <EditText
              android:id="@+id/edtStudentFirstName"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:autofillHints="no"
              android:background="@drawable/edit_text_border"
              android:ems="10"
              android:hint="@string/first_name"
              android:inputType="textPersonName"
              android:padding="4dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="@id/txtTeacher"
              app:layout_constraintStart_toStartOf="@id/txtTeacher"
              app:layout_constraintTop_toBottomOf="@id/txtTeacher" />


          <EditText
              android:id="@+id/edtStudentLastName"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:autofillHints="no"
              android:background="@drawable/edit_text_border"
              android:ems="10"
              android:hint="@string/last_name"
              android:inputType="textPersonName"
              android:padding="4dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="@id/edtStudentFirstName"
              app:layout_constraintStart_toStartOf="@id/edtStudentFirstName"
              app:layout_constraintTop_toBottomOf="@+id/edtStudentFirstName" />

          <EditText
              android:id="@+id/edtStudentProfilePicture"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="8dp"
              android:autofillHints="no"
              android:background="@drawable/edit_text_border"
              android:drawableStart="@drawable/ic_baseline_folder_24"
              android:drawablePadding="8dp"
              android:ems="10"
              android:hint="@string/no_file_chosen"
              android:inputType="phone"
              android:padding="4dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="@id/txtStudentProfilePicture"
              app:layout_constraintStart_toStartOf="@id/txtStudentProfilePicture"
              app:layout_constraintTop_toBottomOf="@+id/txtStudentProfilePicture" />

          <TextView
              android:id="@+id/txtTeacher"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:text="@string/teacher"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textColor="@color/colorPrimary"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="@+id/edtClassName"
              app:layout_constraintStart_toStartOf="@+id/edtClassName"
              app:layout_constraintTop_toBottomOf="@+id/edtClassName" />

          <TextView
              android:id="@+id/txtStudentProfilePicture"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:text="@string/profile_picture"
              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="@+id/edtStudentLastName"
              app:layout_constraintStart_toStartOf="@+id/edtStudentLastName"
              app:layout_constraintTop_toBottomOf="@+id/edtStudentLastName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>